# dioxus-example

./: Cargo.toml  README.md
api/src/: lib.rs
desktop/: Cargo.toml  Dioxus.toml
desktop/src/: main.rs
mobile/: Cargo.toml
share_views/: Cargo.toml
share_views/assets/: blog.css
share_views/src/: blog.rs  lib.rs  routes.rs  shared_navbar.rs
ui/assets/styling/: output.css
ui/src/: lib.rs  tailwind.rs
web/: Cargo.toml
web/assets/: main.css  output.css
web/src/: main.rs
