[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "mobile",
    "api", 
    "shared_views",
]

[workspace.dependencies]
dioxus = { version = "0.6.0" }

# workspace
ui = { path = "ui" }
api = { path = "api" }
shared_views = { path = "shared_views" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
